# thymio

./: CMakeLists.txt  LICENSE  README.md  ScriptDBusThymio.aesl  aseba  ground_sensor_readings.csv  run_thymio.sh  s  sensor_readings.csv  stop_thymio.sh
ThymioInterface/: CMakeLists.txt  thymio_interface.cpp  thymio_interface.h
ThymioInterface/NewInterface/: thymio_interface.h
cmake/: ARGoSBuildChecks.cmake
data/sensor_readings/: acc_test_run_5cmpsincrease.csv  ground_sensor_readings.csv  ground_sensor_readings_LEDsOFF.csv  ground_sensor_readings_desk.csv  proximity_sensor02_readings_darkness.csv  proximity_sensor02_readings_light.csv  proximity_sensor05_readings_darkness.csv  proximity_sensor05_readings_light.csv  proximity_sensor06_readings_light.csv
sensor_readings/: acc_sensor_readings_onspot_10cmps.csv  acc_sensor_readings_onspot_20cmps.csv  acc_test_run_max10cmps.csv  ground_sensor_readings_foil_dark.csv  ground_sensor_readings_foil_light.csv  proximity_sensor06_readings_darkness.csv  sensor_readings.csv
src/: CMakeLists.txt  CMakeLists.txt.user.c3819a5  TODO.org
src/Thymio_NN/: CMakeLists.txt  Thymio_NN.cpp  nn_loader.h  params.h  testexperiment.argos
src/cmake/: ARGoSBuildChecks.cmake  ARGoSBuildOptions.cmake  ARGoSPackaging.cmake  TargetKheperaIV.cmake
src/interface/: CMakeLists.txt  dbusinterface.cpp
src/plugins/robots/Thymio/: CMakeLists.txt
src/plugins/robots/Thymio/control_interface/: ci_Thymio_acc_sensor.cpp  ci_Thymio_acc_sensor.h  ci_Thymio_encoder_sensor.cpp  ci_Thymio_encoder_sensor.h  ci_Thymio_ground_sensor.cpp  ci_Thymio_ground_sensor.h  ci_Thymio_leds_actuator.cpp  ci_Thymio_leds_actuator.h  ci_Thymio_proximity_sensor.cpp  ci_Thymio_proximity_sensor.h
src/plugins/robots/Thymio/real_robot/: dbusinterface.cpp  dbusinterface.h  main.cpp  real_Thymio.cpp  real_Thymio.cpp.autosave  real_Thymio.h  real_Thymio.h.autosave  real_Thymio_device.cpp  real_Thymio_device.h  real_Thymio_device.h.autosave  real_Thymio_differential_steering_actuator.cpp  real_Thymio_differential_steering_actuator.h  real_Thymio_ground_sensor.cpp  real_Thymio_ground_sensor.h  real_Thymio_leds_actuator.cpp  real_Thymio_leds_actuator.h  real_Thymio_proximity_sensor.cpp  real_Thymio_proximity_sensor.h  real_robot.cpp  real_robot.cpp.autosave  real_robot.h  thymio_interface.cpp
src/plugins/robots/Thymio/simulator/: Thymio_acc_sensor.cpp  Thymio_acc_sensor.h  Thymio_entity.cpp  Thymio_entity.h  Thymio_ground_rotzonly_sensor.cpp  Thymio_ground_rotzonly_sensor.h  Thymio_led_actuator.cpp  Thymio_led_actuator.h  Thymio_measures.cpp  Thymio_measures.h  Thymio_proximity_default_sensor.cpp  Thymio_proximity_default_sensor.cpp.autosave  Thymio_proximity_default_sensor.h  dynamics2d_Thymio_model.cpp  dynamics2d_Thymio_model.h  dynamics3d_Thymio_model.cpp  dynamics3d_Thymio_model.h  qtopengl_Thymio.cpp  qtopengl_Thymio.h  thymio_led_actuator.h
src/plugins/robots/thymio/: CMakeLists.txt  CMakeLists.txt~
src/plugins/robots/thymio/control_interface/: ci_thymio_acc_sensor.cpp  ci_thymio_acc_sensor.h  ci_thymio_ground_sensor.cpp  ci_thymio_ground_sensor.h  ci_thymio_leds_actuator.cpp  ci_thymio_leds_actuator.h  ci_thymio_proximity_sensor.cpp  ci_thymio_proximity_sensor.h
src/plugins/robots/thymio/real_robot/: main.cpp  real_thymio.cpp  real_thymio.h  real_thymio_acc_sensor.cpp  real_thymio_acc_sensor.h  real_thymio_battery_sensor.cpp  real_thymio_battery_sensor.h  real_thymio_device.cpp  real_thymio_device.h  real_thymio_differential_steering_actuator.cpp  real_thymio_differential_steering_actuator.h  real_thymio_ground_sensor.cpp  real_thymio_ground_sensor.h  real_thymio_leds_actuator.cpp  real_thymio_leds_actuator.h  real_thymio_proximity_sensor.cpp  real_thymio_proximity_sensor.h
src/plugins/robots/thymio/simulator/: dynamics2d_thymio_model.cpp  dynamics2d_thymio_model.h  qtopengl_thymio.cpp  qtopengl_thymio.h  thymio_acc_sensor.cpp  thymio_acc_sensor.h  thymio_entity.cpp  thymio_entity.h  thymio_ground_rotzonly_sensor.cpp  thymio_ground_rotzonly_sensor.h  thymio_led_actuator.cpp  thymio_led_actuator.h  thymio_measures.cpp  thymio_measures.h  thymio_proximity_default_sensor.cpp  thymio_proximity_default_sensor.h
src/testing/: CMakeLists.txt  Thymio_diffusion.cpp  Thymio_diffusion.h  testbuzzexperiment.argos  testexperiment.argos
src/testing/Accelerometer_test/: CMakeLists.txt  accelerometer_test.cpp  accelerometer_test.h  testexperiment.argos
src/testing/Accelerometer_test2/: CMakeLists.txt  accelerometer_test2.cpp  accelerometer_test2.h  testexperiment.argos
src/testing/Thymio_diffusion/: CMakeLists.txt  Thymio_diffusion.cpp  Thymio_diffusion.h  realtestexperiment.argos  testexperiment.argos
src/testing/Thymio_diffusion/loop_functions/: CMakeLists.txt  draw_position.h
src/testing/Thymio_diffusion/trajectory_loop_functions/: CMakeLists.txt  trajectory_loop_functions.cpp  trajectory_loop_functions.h  trajectory_qtuser_functions.cpp  trajectory_qtuser_functions.h
src/testing/accelerometer_test/: CMakeLists.txt  accelerometer_test.cpp  accelerometer_test.h  testexperiment.argos
src/testing/accelerometer_test2/: CMakeLists.txt  accelerometer_test2.cpp  accelerometer_test2.h
src/testing/ground_sensor_test/: CMakeLists.txt  ground_sensor_test.cpp  ground_sensor_test.h  testexperiment.argos
src/testing/loop_functions/: CMakeLists.txt  Makefile  cmake_install.cmake
src/testing/sensor_test/: CMakeLists.txt  sensor_test.cpp  sensor_test.h  testexperiment.argos
src/testing/sensor_test2/: CMakeLists.txt  sensor_test2.cpp  sensor_test2.h  testexperiment.argos
src/testing/thymio_diffusion/: CMakeLists.txt  realtestexperiment.argos  testexperiment.argos  thymio_diffusion.cpp
src/testing/thymio_diffusion/loop_functions/: draw_position.cpp  draw_position.h
src/testing/thymio_diffusion/trajectory_loop_functions/: trajectory_loop_functions.cpp  trajectory_loop_functions.h
thymiointerface/: CMakeLists.txt  thymio_interface.cpp
thymiointerface/DBUSinterface/: thymio_interface.cpp  thymio_interface.h
thymiointerface/NewInterface/: thymio_interface.cpp
(+18 files in other folders)
