cmake_minimum_required(VERSION 3.10)
project(argos3_kheperaiv_master)

set(CMAKE_CXX_STANDARD 11)

include_directories(src/plugins/robots/kheperaiv/control_interface)
include_directories(src/plugins/robots/kheperaiv/real_robot)
include_directories(src/plugins/robots/kheperaiv/simulator)
include_directories(src/testing)

add_executable(argos3_kheperaiv_master
        build_sim/plugins/robots/kheperaiv/argos3plugin_simulator_kheperaiv_autogen/mocs_compilation.cpp
        build_sim/testing/kheperaiv_diffusion_autogen/mocs_compilation.cpp
        build_sim/cmake_install.cmake
        build_sim/CMakeCache.txt
        build_sim/CPackConfig.cmake
        build_sim/CPackSourceConfig.cmake
        build_sim/install_manifest.txt
        build_sim/Makefile
        cmake-build-debug/argos3_kheperaiv_master.cbp
        cmake-build-debug/cmake_install.cmake
        cmake-build-debug/CMakeCache.txt
        cmake-build-debug/Makefile
        doc/ARGoS_LICENSE.txt
        "doc/Khepera IV User Manual 3.x.pdf"
        src/cmake/ARGoSBuildChecks.cmake
        src/cmake/ARGoSBuildFlags.cmake
        src/cmake/ARGoSBuildOptions.cmake
        src/cmake/ARGoSPackaging.cmake
        src/cmake/TargetKheperaIV.cmake
        src/plugins/robots/kheperaiv/control_interface/buzz_controller_kheperaiv.cpp
        src/plugins/robots/kheperaiv/control_interface/buzz_controller_kheperaiv.h
        src/plugins/robots/kheperaiv/control_interface/ci_kheperaiv_encoder_sensor.cpp
        src/plugins/robots/kheperaiv/control_interface/ci_kheperaiv_encoder_sensor.h
        src/plugins/robots/kheperaiv/control_interface/ci_kheperaiv_ground_sensor.cpp
        src/plugins/robots/kheperaiv/control_interface/ci_kheperaiv_ground_sensor.h
        src/plugins/robots/kheperaiv/control_interface/ci_kheperaiv_lidar_sensor.cpp
        src/plugins/robots/kheperaiv/control_interface/ci_kheperaiv_lidar_sensor.h
        src/plugins/robots/kheperaiv/control_interface/ci_kheperaiv_light_sensor.cpp
        src/plugins/robots/kheperaiv/control_interface/ci_kheperaiv_light_sensor.h
        src/plugins/robots/kheperaiv/control_interface/ci_kheperaiv_proximity_sensor.cpp
        src/plugins/robots/kheperaiv/control_interface/ci_kheperaiv_proximity_sensor.h
        src/plugins/robots/kheperaiv/control_interface/ci_kheperaiv_ultrasound_sensor.cpp
        src/plugins/robots/kheperaiv/control_interface/ci_kheperaiv_ultrasound_sensor.h
        src/plugins/robots/kheperaiv/real_robot/main.cpp
        src/plugins/robots/kheperaiv/real_robot/real_kheperaiv.cpp
        src/plugins/robots/kheperaiv/real_robot/real_kheperaiv.h
        src/plugins/robots/kheperaiv/real_robot/real_kheperaiv_battery_sensor.cpp
        src/plugins/robots/kheperaiv/real_robot/real_kheperaiv_battery_sensor.h
        src/plugins/robots/kheperaiv/real_robot/real_kheperaiv_device.cpp
        src/plugins/robots/kheperaiv/real_robot/real_kheperaiv_device.h
        src/plugins/robots/kheperaiv/real_robot/real_kheperaiv_differential_steering_actuator.cpp
        src/plugins/robots/kheperaiv/real_robot/real_kheperaiv_differential_steering_actuator.h
        src/plugins/robots/kheperaiv/real_robot/real_kheperaiv_gripper_actuator.cpp
        src/plugins/robots/kheperaiv/real_robot/real_kheperaiv_gripper_actuator.h
        src/plugins/robots/kheperaiv/real_robot/real_kheperaiv_ground_sensor.cpp
        src/plugins/robots/kheperaiv/real_robot/real_kheperaiv_ground_sensor.h
        src/plugins/robots/kheperaiv/real_robot/real_kheperaiv_leds_actuator.cpp
        src/plugins/robots/kheperaiv/real_robot/real_kheperaiv_leds_actuator.h
        src/plugins/robots/kheperaiv/real_robot/real_kheperaiv_lidar_sensor.cpp
        src/plugins/robots/kheperaiv/real_robot/real_kheperaiv_lidar_sensor.h
        src/plugins/robots/kheperaiv/real_robot/real_kheperaiv_proximity_sensor.cpp
        src/plugins/robots/kheperaiv/real_robot/real_kheperaiv_proximity_sensor.h
        src/plugins/robots/kheperaiv/real_robot/real_kheperaiv_ultrasound_sensor.cpp
        src/plugins/robots/kheperaiv/real_robot/real_kheperaiv_ultrasound_sensor.h
        src/plugins/robots/kheperaiv/simulator/dynamics2d_kheperaiv_model.cpp
        src/plugins/robots/kheperaiv/simulator/dynamics2d_kheperaiv_model.h
        src/plugins/robots/kheperaiv/simulator/kheperaiv_entity.cpp
        src/plugins/robots/kheperaiv/simulator/kheperaiv_entity.h
        src/plugins/robots/kheperaiv/simulator/kheperaiv_ground_rotzonly_sensor.cpp
        src/plugins/robots/kheperaiv/simulator/kheperaiv_ground_rotzonly_sensor.h
        src/plugins/robots/kheperaiv/simulator/kheperaiv_lidar_default_sensor.cpp
        src/plugins/robots/kheperaiv/simulator/kheperaiv_lidar_default_sensor.h
        src/plugins/robots/kheperaiv/simulator/kheperaiv_light_rotzonly_sensor.cpp
        src/plugins/robots/kheperaiv/simulator/kheperaiv_light_rotzonly_sensor.h
        src/plugins/robots/kheperaiv/simulator/kheperaiv_measures.cpp
        src/plugins/robots/kheperaiv/simulator/kheperaiv_measures.h
        src/plugins/robots/kheperaiv/simulator/kheperaiv_proximity_default_sensor.cpp
        src/plugins/robots/kheperaiv/simulator/kheperaiv_proximity_default_sensor.h
        src/plugins/robots/kheperaiv/simulator/kheperaiv_texture_bottom.png
        src/plugins/robots/kheperaiv/simulator/kheperaiv_texture_side.png
        src/plugins/robots/kheperaiv/simulator/kheperaiv_texture_top.png
        src/plugins/robots/kheperaiv/simulator/kheperaiv_ultrasound_default_sensor.cpp
        src/plugins/robots/kheperaiv/simulator/kheperaiv_ultrasound_default_sensor.h
        src/plugins/robots/kheperaiv/simulator/qtopengl_kheperaiv.cpp
        src/plugins/robots/kheperaiv/simulator/qtopengl_kheperaiv.h
        src/plugins/robots/kheperaiv/CMakeLists.txt
        src/plugins/robots/CMakeLists.txt
        src/plugins/CMakeLists.txt
        src/testing/CMakeLists.txt
        src/testing/kheperaiv_diffusion.cpp
        src/testing/kheperaiv_diffusion.h
        src/testing/test.bzz
        src/testing/testbuzzexperiment.argos
        src/testing/testexperiment.argos
        src/CMakeLists.txt
        src/TODO.org
        CMakeLists.txt
        README.md)
